# brevkode-automater-llm

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
documents/: Eksempel på kode brev fra Perplexity.docm  Kodet version af brevkoder.docx  Liste over alle nøgler.csv  Metode for brevkodning.docx  Prompt dok.docx  Ukodet dokument fra ønsket brevdesgin.docx  liste over alle nøgler.xlsx  ~$det version af brevkoder.docx  ~$liste over alle nøgler.xlsx  ~$odet dokument fra ønsket brevdesgin.docx  ~$ompt dok.docx  ~$sempel på kode brev fra Perplexity.docm  ~$tode for brevkodning.docx
old_reference_files/components/: document_processing.py
src/: streamlit_app.py  streamlit_app_test_llm.py  test_mergefields.py
src/components/: agent.py  azure_openai_controller.py  document_processing.py  graph_agent.py  graph_tools.py  mappings.py  merge_fields.py  tools.py
studio/: .env  agent.py  langgraph.json  requirements.txt
